# seff

./: Cargo.toml  README.mkdn
fonts/: README.mkdn
notes/: 20220430.mkdn  20220501.mkdn  20220502.mkdn
src/: gen.rs  lib.rs  load.rs
